Overflow fixed

--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,7 @@ html{
     align-items: center;
     justify-content: space-between;
 }
+
 :root{
     --nav-color: #202c33;
     --serch-backgroung: #202c33;
@@ -40,6 +41,8 @@ html{
 
 body{
     background: var(--app-background);
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .big-container{
@@ -54,7 +57,6 @@ body{
         max-width: 41em;
         min-width: 41em;
         border-right: 1px solid #aebac139;
-
 
         .left-nav{
             @include display-between();
@@ -78,7 +80,6 @@ body{
                 }
             }
         }
-
         .left-input{
             background: var(--group-color);
             padding: .7em 1em;
@@ -116,8 +117,6 @@ body{
                     cursor: pointer;
                 }
             }
-
-
             .left-chats-c{
                 height: 80vh;
                 overflow-y: scroll;
@@ -253,7 +252,6 @@ body{
         flex-direction: column;
         justify-content: space-between;
 
-
         .birlik{
             position: relative;
             isolation: isolate;
@@ -308,7 +306,6 @@ body{
                 flex-direction: column;
                 gap: 1.3em;
                 height: 80vh;
-
                 overflow-y: scroll;
 
                 &::-webkit-scrollbar-thumb{
@@ -317,7 +314,6 @@ body{
                 &::-webkit-scrollbar{
                     width: .8em;
                 }
-
                 .smile-box-r{
                     display: flex;
                     align-items: center;
@@ -374,7 +370,6 @@ body{
                         }
                     }
                 }
-
                 .smile-box-l{
                     display: flex;
                     align-items: center;
@@ -428,7 +423,6 @@ body{
                         }
                     }
                 }
-
             }
             
             .right-search{
@@ -463,7 +457,5 @@ body{
                 }
             }
         }
-
     }
-    
 }
